--- a/Survey/pom.xml
+++ b/Survey/pom.xml
@@ -47,6 +47,20 @@
 			<version>3.0.8</version>
 		</dependency>			
 		
+		<!-- Jdbc -->
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-jdbc</artifactId>
+    		<version>5.2.13.RELEASE</version>
+		</dependency>
+		
+		<!-- MySQL  -->
+		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.23</version>
+		</dependency>
+		
 	</dependencies>
   	<build>
 		<pluginManagement>
