--- a/Survey/src/main/resources/application.properties
+++ b/Survey/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:MySQLChiara://localhost:3306/mydb
+jdbc.url = jdbc:mysql://localhost:3306/mydb
 jdbc.username = admin
 jdbc.password = admin
