--- a/Survey/src/main/resources/application.properties
+++ b/Survey/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/mydb
-jdbc.username = admin
-jdbc.password = admin
+jdbc.url = jdbc:MySQL://localhost:3306/mydb
+jdbc.username = root
+jdbc.password = Chiara99
