Valentini e Bertagnoli: Implementazione Hibernate con mapping della classe UtenteRegistrato. Registrazione e Login funzionanti

--- a/.gitignore
+++ b/.gitignore
@@ -111,7 +111,10 @@ fabric.properties
 *.iws
 
 
+DB Connections
+
 src/main/resources/application.properties
+src/main/resources/META-INF/persistence.xml
 
 
 
@@ -171,3 +174,4 @@ databases/postgis/
 # Vim
 *.swp
 *.swo
+
