--- a/Survey/pom.xml
+++ b/Survey/pom.xml
@@ -9,12 +9,6 @@
   <name>Survey.io</name>
   <description>WebApp per la gestione di questionari</description>
   
-  <properties>
-  	<sonar.projectKey>UnimibSoftEngCourse2021_progetto-questionari-1-gruppo-questionari-1</sonar.projectKey>
-  	<sonar.organization>unimibsoftengcourse2021</sonar.organization>
-  	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-  </properties>
-  
   <dependencies>
 	
 		<!-- Spring -->
@@ -51,8 +45,11 @@
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-extras</artifactId>
 			<version>3.0.8</version>
-		</dependency>			
-		
+		</dependency>
+
+
+	    <!-- PERSISTENCE -->
+
 		<!-- Jdbc -->
 		<dependency>
     		<groupId>org.springframework</groupId>
@@ -66,8 +63,40 @@
     		<artifactId>mysql-connector-java</artifactId>
     		<version>8.0.23</version>
 		</dependency>
-		
-	</dependencies>
+
+	  <!-- Hibernate-core -->
+	  <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-core</artifactId>
+		  <version>5.4.28.Final</version>
+	  </dependency>
+
+	  <!-- Spring-data-jpa -->
+	  <dependency>
+		  <groupId>org.springframework.data</groupId>
+		  <artifactId>spring-data-jpa</artifactId>
+		  <version>2.4.3</version>
+	  </dependency>
+
+	  <!-- Hibernate-c3p0 -->
+	  <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-c3p0</artifactId>
+		  <version>5.4.21.Final</version>
+	  </dependency>
+
+	  <!-- c3p0 -->
+	  <dependency>
+		  <groupId>com.mchange</groupId>
+		  <artifactId>c3p0</artifactId>
+		  <version>0.9.5.2</version>
+	  </dependency>
+
+
+
+
+
+  </dependencies>
   	<build>
 		<pluginManagement>
 			<plugins>
