Aggiunte relazioni MTM delle entità Dom - Comp e Dom - Quest

--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ fabric.properties
 DB Connections
 
 src/main/resources/application.properties
+src/main/resources/META-INF/persistence.xml
 
 
 
