aggiunta gestione compilazioni nella classe gestore questionari e aggiunto modulo json

--- a/Survey/pom.xml
+++ b/Survey/pom.xml
@@ -92,6 +92,13 @@
 		  <version>0.9.5.2</version>
 	  </dependency>
 
+	  <!-- JSON -->
+	  <dependency>
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>20201115</version>
+	</dependency>
+
 
 
 
