--- a/Survey/pom.xml
+++ b/Survey/pom.xml
@@ -99,7 +99,19 @@
 		<version>20201115</version>
 	</dependency>
 
-
+	<!-- PDF -->
+	<dependency>
+    	<groupId>com.github.librepdf</groupId>
+    	<artifactId>openpdf</artifactId>
+    	<version>1.3.25</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>javax.xml.bind</groupId>
+    	<artifactId>jaxb-api</artifactId>
+    	<version>2.3.1</version>
+	</dependency>
+	
 
 
 
