--- a/Survey/pom.xml
+++ b/Survey/pom.xml
@@ -97,7 +97,15 @@
 		<groupId>org.json</groupId>
 		<artifactId>json</artifactId>
 		<version>20201115</version>
-	</dependency>
+	  </dependency>
+	   
+	  <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+
+	  <dependency>
+	      <groupId>com.fasterxml.jackson.core</groupId>
+	      <artifactId>jackson-core</artifactId>
+	      <version>2.12.1</version>
+	  </dependency>
 
 
 
