--- a/Survey/pom.xml
+++ b/Survey/pom.xml
@@ -47,6 +47,20 @@
 			<version>3.0.8</version>
 		</dependency>
 
+		<!-- javaBeanActivation-->
+		<dependency>
+    		<groupId>javax.activation</groupId>
+    		<artifactId>activation</artifactId>
+   			 <version>1.1.1</version>
+		</dependency>
+
+
+		<!-- javax.mail-api -->
+		<dependency>
+    		<groupId>com.sun.mail</groupId>
+    		<artifactId>javax.mail</artifactId>
+    		<version>1.6.2</version>
+		</dependency>
 
 	    <!-- PERSISTENCE -->
 
